feat: novas funcionatidades com a alteracao de Cartoes